--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ form fieldset{
     border: 1px solid red;
     border-radius: 30px;
     padding-bottom: 40px;
+    direction: rtl;
 
     width: 900px;
     
